--- a/index.html
+++ b/index.html
@@ -710,13 +710,13 @@
                     updateUI();
                 };
             };
-            document.body.appendChild(clearDataBtn);
+            // document.body.appendChild(clearDataBtn);
             
             const generateDummyDataBtn = document.createElement('button');
             generateDummyDataBtn.textContent = 'Beispieldaten erstellen';
             generateDummyDataBtn.classList.add('fixed', 'bottom-4', 'right-56', 'bg-primary', 'text-white', 'py-2', 'px-4', 'rounded-full', 'shadow-lg', 'hover:bg-blue-600', 'transition-colors', 'z-40');
             generateDummyDataBtn.onclick = generateDummyData;
-            document.body.appendChild(generateDummyDataBtn);
+            // document.body.appendChild(generateDummyDataBtn);
         });
 
         // Initialisierung der App
