--- a/index.html
+++ b/index.html
@@ -467,16 +467,16 @@
                                     <div id="progress-bar" class="h-full bg-accent progress-bar-fill rounded-full" style="width: 0%;"></div>
                                 </div>
                                 <p id="progress-text" class="text-center text-sm font-semibold text-slate-400"></p>
-                            </div>
-                            
-                            <div class="mt-8">
-                                <h3 class="text-lg font-bold text-white mb-2">Aktivität</h3>
-                                <div class="flex justify-center gap-2 mb-4">
-                                    <button data-timeframe="week" class="timeframe-btn bg-primary text-white font-semibold py-1 px-3 rounded-full hover:bg-blue-700 transition-colors">Woche</button>
-                                    <button data-timeframe="month" class="timeframe-btn bg-slate-600 text-white font-semibold py-1 px-3 rounded-full hover:bg-slate-500 transition-colors">Monat</button>
-                                    <button data-timeframe="year" class="timeframe-btn bg-slate-600 text-white font-semibold py-1 px-3 rounded-full hover:bg-slate-500 transition-colors">Jahr</button>
+                                
+                                <div class="mt-8">
+                                    <h3 class="text-lg font-bold text-white mb-2">Aktivität</h3>
+                                    <div class="flex justify-center gap-2 mb-4">
+                                        <button data-timeframe="week" class="timeframe-btn bg-primary text-white font-semibold py-1 px-3 rounded-full hover:bg-blue-700 transition-colors">Woche</button>
+                                        <button data-timeframe="month" class="timeframe-btn bg-slate-600 text-white font-semibold py-1 px-3 rounded-full hover:bg-slate-500 transition-colors">Monat</button>
+                                        <button data-timeframe="year" class="timeframe-btn bg-slate-600 text-white font-semibold py-1 px-3 rounded-full hover:bg-slate-500 transition-colors">Jahr</button>
+                                    </div>
+                                    <canvas id="weekly-chart" class="w-full h-48"></canvas>
                                 </div>
-                                <canvas id="weekly-chart" class="w-full h-48"></canvas>
                             </div>
                             <!-- Minuten pro Sportart Auswertung -->
                             <div class="card bg-slate-700 p-6 rounded-xl">
@@ -535,18 +535,18 @@
                                     </div>
                                     <div>
                                         <label for="new-sport-weight" class="block text-slate-300 font-semibold mb-1">Gewichtung (z.B. 1.5)</label>
-                                        <input type="number" step="0.1" id="new-sport-weight" placeholder="z.B. 1.5" class="w-full p-3 rounded-lg bg-slate-800 text-white border border-slate-600 focus:outline-none focus:ring-2 focus:ring-primary">
+                                        <input type="number" step="0.1" id="new-sport-weight" placeholder="z.b. 1.5" class="w-full p-3 rounded-lg bg-slate-800 text-white border border-slate-600 focus:outline-none focus:ring-2 focus:ring-primary">
                                     </div>
                                     <button type="submit" class="w-full bg-primary text-white font-semibold py-3 rounded-lg hover:bg-blue-700 transition-colors">Sportart hinzufügen</button>
                                 </form>
                                 <div class="mt-8">
-                                    <h3 class="text-lg font-bold text-white mb-2">Aktuelle Sportarten und Gewichtungen </h3>
+                                    <h3 class="text-lg font-bold text-white mb-2">Aktuelle Sportarten und Gewichtungen</h3>
                                     <div id="sport-weight-list" class="space-y-2">
                                         <!-- Die Liste wird hier geladen -->
                                     </div>
-                                </div>
                             </div>
                         </div>
+                    </div>
                     </div>
                 `;
                 const dateInput = document.getElementById('date-input');
@@ -581,12 +581,9 @@
 
             /** Rendert das Dashboard mit den aktuellen Daten */
             function renderDashboard() {
-                // Filtere Einträge basierend auf dem aktuell angezeigten Benutzer
-                const displayedUserEntries = entries.filter(entry => entry.userId === displayedUserId);
-                
-                renderMyProgress(displayedUserEntries);
-                renderSportSummary(displayedUserEntries);
-                renderRecentActivities(displayedUserEntries);
+                renderMyProgress(entries.filter(entry => entry.userId === displayedUserId));
+                renderSportSummary(entries.filter(entry => entry.userId === displayedUserId));
+                renderRecentActivities(entries.filter(entry => entry.userId === displayedUserId));
                 renderLeaderboard(leaderboardParticipants);
                 renderSportSelect();
             }
@@ -680,8 +677,7 @@
                 let labels = [];
 
                 const now = new Date();
-                // Funktion zum Abrufen des korrekten Datumsobjekts (Firestore Timestamp oder JS Date)
-                const getEntryDate = (entry) => entry.timestamp.toDate ? entry.timestamp.toDate() : new Date(entry.timestamp);
+                const getEntryDate = (entry) => entry.timestamp instanceof Date ? entry.timestamp : new Date(entry.timestamp.toDate());
 
                 if (chartTimeframe === 'week') {
                     const dailyMinutes = new Array(7).fill(0);
@@ -779,7 +775,6 @@
 
                 let sortedParticipants = [...participants];
                 
-                // Sortiere: Aktueller Benutzer zuerst, dann der Rest (wichtig für die Darstellung)
                 const loggedInUser = sortedParticipants.find(p => p.id === userId);
                 sortedParticipants = loggedInUser ? [loggedInUser, ...sortedParticipants.filter(p => p.id !== userId)] : sortedParticipants;
                 
@@ -787,15 +782,14 @@
                 const weightedLeader = [...participants].sort((a, b) => b.weightedMinutes - a.weightedMinutes)[0] || { weightedMinutes: -1, id: null };
                 
                 leaderboardEl.innerHTML = `
-                    <!-- Behalte das korrigierte Grid-Layout bei, um das Layout stabil zu halten -->
-                    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div class="flex flex-col sm:flex-row gap-4">
                         ${sortedParticipants.map(p => {
                             const isMinutesLeader = p.id === minutesLeader.id;
                             const isWeightedLeader = p.id === weightedLeader.id;
                             const isActiveUser = p.id === displayedUserId;
                             
                             return `
-                                <div data-user-id="${p.id}" class="p-6 rounded-xl border-2 cursor-pointer transition-all duration-200 ease-in-out ${isActiveUser ? 'border-primary' : 'border-slate-600'} bg-slate-800 text-center relative overflow-hidden hover:scale-105">
+                                <div data-user-id="${p.id}" class="flex-1 p-6 rounded-xl border-2 cursor-pointer transition-all duration-200 ease-in-out ${isActiveUser ? 'border-primary' : 'border-slate-600'} bg-slate-800 text-center relative overflow-hidden hover:scale-105">
                                     <h3 class="text-xl font-bold mb-2 text-white">
                                         ${p.nickname}
                                         ${p.id === userId ? ' (Du)' : ''}
@@ -816,7 +810,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="text-sm text-slate-500 mt-2">${p.id}</div> 
+                                    <div class="text-sm text-slate-500 mt-2">${p.id}</div>
                                 </div>
                             `;
                         }).join('')}
@@ -857,6 +851,7 @@
                     const isMyEntry = activity.userId === userId;
                     
                     if (isMyEntry && activity.id === editingDocId) {
+                        // Korrigierte und vervollständigte HTML-Struktur für den Bearbeitungsmodus
                         return `
                             <div class="flex flex-col p-4 bg-slate-800 rounded-lg border border-primary" data-doc-id="${activity.id}">
                                 <div class="flex justify-between items-center mb-2">
